Hago un pequeño codigo como testeo

--- a/NOTEBOOKS/W01.ipynb
+++ b/NOTEBOOKS/W01.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9b9ae2f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/itnas/Documents/UQ/FisicaComputacional3/Estudiantes/notebooks'"
+       "'c:\\\\Users\\\\juanj\\\\Documentos\\\\PROYECTO-INGEGOD\\\\NOTEBOOKS'"
       ]
      },
      "execution_count": 1,
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "c73d95fd",
    "metadata": {},
    "outputs": [
@@ -58,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OS: macOS-26.0.1-arm64-arm-64bit\n",
-      "Python: 3.9.6\n",
+      "OS: Windows-11-10.0.26200-SP0\n",
+      "Python: 3.12.10\n",
       "DuckDB: v1.4.4\n"
      ]
     },
@@ -67,11 +67,11 @@
      "data": {
       "text/plain": [
        "{'exists': True,\n",
-       " 'path': '/Users/itnas/Documents/UQ/FisicaComputacional3/Estudiantes/data/exoplanets.duckdb',\n",
+       " 'path': 'C:\\\\Users\\\\juanj\\\\Documentos\\\\data\\\\exoplanets.duckdb',\n",
        " 'size_bytes': 12288}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "[('Luis', 2), ('Ana', 2), ('Sofia', 1)]"
+       "[('Ana', 2), ('Luis', 2), ('Sofia', 1)]"
       ]
      },
      "execution_count": 6,
@@ -276,10 +276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c84f5bbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROJECT_ROOT: C:\\Users\\juanj\\Documentos\\PROYECTO-INGEGOD\n",
+      "OS: Windows-11-10.0.26200-SP0\n",
+      "Python: 3.12.10\n",
+      "DuckDB: v1.4.4\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup común (cross-platform) + detección de raíz del proyecto\n",
     "import sys, time, json, hashlib, platform, subprocess\n",
@@ -347,20 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9b5019c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/itnas/Documents/UQ/FisicaComputacional3/Estudiantes/data/raw/pscomppars.csv')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "EXPECTED = \"pscomppars.csv\"\n",
     "raw_csv = RAW_DIR / EXPECTED\n",
@@ -396,27 +397,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c25c6595",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running: c:\\Users\\juanj\\Documentos\\PROYECTO-INGEGOD\\.venv\\Scripts\\python.exe -m src.ingest.download_exoplanets --format csv --limit 50000\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "({'exists': True,\n",
-       "  'path': 'C:\\\\Users\\\\hola-\\\\Documents\\\\FisicaComputacional3-Win\\\\de1-fundamentos-nasa-duckdb\\\\data\\\\raw\\\\pscomppars.csv',\n",
-       "  'size_bytes': 921168},\n",
-       " '3c67b65ad2c3b65caddb80ddd1c400fc0d12a55f11cb623c15bdf9f7542c7b4d')"
+       "  'path': 'C:\\\\Users\\\\juanj\\\\Documentos\\\\PROYECTO-INGEGOD\\\\data\\\\raw\\\\pscomppars.csv',\n",
+       "  'size_bytes': 1067323},\n",
+       " '7004b1f40a6ff1db464a98c990bf9d0056a04e947132941d5a34e498d3677df2')"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Si no hay Raw, NO intentamos descargar automáticamente (para evitar fallos sin internet).\n",
     "# Si quieres descargar desde clase (y tienes internet), pon DO_DOWNLOAD=True.\n",
-    "DO_DOWNLOAD = False\n",
+    "DO_DOWNLOAD = True\n",
     "\n",
     "if raw_csv is None:\n",
     "    if DO_DOWNLOAD:\n",
@@ -446,18 +455,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8ef39f82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_duckdb.DuckDBPyConnection at 0x10a2f5930>"
+       "<_duckdb.DuckDBPyConnection at 0x23330a2bef0>"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -470,18 +480,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "88c1caad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6087,)]"
+       "[(6107,)]"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -503,18 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "51e4c0d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6087, 16)"
+       "(6107, 19)"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -526,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dbfcaec0",
    "metadata": {},
    "outputs": [
@@ -536,8 +548,9 @@
        "[(0,)]"
       ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -547,27 +560,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "32bb4504",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Kepler-1167 b', 'Kepler-1167', 'Transit', 2016),\n",
-       " ('Kepler-1740 b', 'Kepler-1740', 'Transit', 2021),\n",
-       " ('Kepler-1581 b', 'Kepler-1581', 'Transit', 2016),\n",
-       " ('Kepler-644 b', 'Kepler-644', 'Transit', 2016),\n",
-       " ('Kepler-1752 b', 'Kepler-1752', 'Transit', 2021),\n",
-       " ('Kepler-280 c', 'Kepler-280', 'Transit', 2014),\n",
-       " ('Kepler-1208 b', 'Kepler-1208', 'Transit', 2016),\n",
-       " ('Kepler-263 c', 'Kepler-263', 'Transit', 2014),\n",
-       " ('Kepler-1101 b', 'Kepler-1101', 'Transit', 2016),\n",
-       " ('HD 168746 b', 'HD 168746', 'Radial Velocity', 2002)]"
+       "[('11 Com b', '11 Com', 'Radial Velocity', 2007),\n",
+       " ('11 UMi b', '11 UMi', 'Radial Velocity', 2009),\n",
+       " ('14 And b', '14 And', 'Radial Velocity', 2008),\n",
+       " ('14 Her b', '14 Her', 'Radial Velocity', 2002),\n",
+       " ('16 Cyg B b', '16 Cyg B', 'Radial Velocity', 1996),\n",
+       " ('17 Sco b', '17 Sco', 'Radial Velocity', 2020),\n",
+       " ('18 Del b', '18 Del', 'Radial Velocity', 2008),\n",
+       " ('1RXS J160929.1-210524 b', '1RXS J160929.1-210524', 'Imaging', 2008),\n",
+       " ('24 Boo b', '24 Boo', 'Radial Velocity', 2018),\n",
+       " ('24 Sex b', '24 Sex', 'Radial Velocity', 2010)]"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -587,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5531c1c4",
    "metadata": {},
    "outputs": [
@@ -595,12 +609,13 @@
      "data": {
       "text/plain": [
        "{'exists': True,\n",
-       " 'path': '/Users/itnas/Documents/UQ/FisicaComputacional3/Estudiantes/artifacts/w01b_raw_evidence_1770177020.json',\n",
-       " 'size_bytes': 220}"
+       " 'path': 'C:\\\\Users\\\\juanj\\\\Documentos\\\\PROYECTO-INGEGOD\\\\artifacts\\\\w01b_raw_evidence_1771375314.json',\n",
+       " 'size_bytes': 216}"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -672,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -686,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
